--- a/front-end/add-mind/src/admin_panel/components/AlertMessage/aletMessage.module.css
+++ b/front-end/add-mind/src/admin_panel/components/AlertMessage/aletMessage.module.css
@@ -1,7 +1,10 @@
+body{
+    background-color: white;
+}
 .alert_message_container {
     width: 25vw;
     height: 20vh;
-    background-color: rgba(102, 102, 102, 0.36);
+    background-color: rgba(0, 0, 0, 0.52);
     display: none;
     position: absolute;
     top:0;
@@ -17,6 +20,8 @@
     height: 20%;
     display: flex;
     flex-direction: row;
+    color: black;
+    font-weight: bold;
 }
 
 .alert_message_icon {
@@ -55,6 +60,17 @@
 .alert_message_loader {
     width: 100%;
     height: 5%;
-    background-color: #b9e0fe;
+    animation: loaderSlide 3s linear forwards;
 }
+
+@keyframes loaderSlide {
+    from {
+        width: 100%;
+    }
+    to {
+        width: 0%;
+    }
+}
+
+
 
